--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -60,7 +60,7 @@
 						<span ng-click="setItem(item.id, $index, parentIndex, 3)"><img class="op-img" src="assets/img/prepare/back_icon.png" default-src="assets/img/prepare/back_icon.png" active-src="assets/img/prepare/back_icon_active.png" title="下移"></span>
 						<span ng-click="setItem(item.id, $index, parentIndex, 2)"><img class="op-img" src="assets/img/prepare/move_icon.png" default-src="assets/img/prepare/move_icon.png" active-src="assets/img/prepare/move_icon_active.png" title="上移"></span>
 						<span ng-click="setItem(item.id, $index, parentIndex, 4)"><img class="op-img" src="assets/img/prepare/set_top_icon.png" default-src="assets/img/prepare/set_top_icon.png" active-src="assets/img/prepare/set_top_icon_active.png" title="置顶"></span>
-						<span ng-click="deleteItem(item.id)"><img class="op-img" src="assets/img/prepare/delete_icon.png" default-src="assets/img/prepare/delete_icon.png" active-src="assets/img/prepare/delete_icon_active.png" title="删除"></span>
+						<span ng-click="deleteItem(item.id,'',parentIndex)"><img class="op-img" src="assets/img/prepare/delete_icon.png" default-src="assets/img/prepare/delete_icon.png" active-src="assets/img/prepare/delete_icon_active.png" title="删除"></span>
 					</div>
 				</div>
 			</div>
