--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -163,3 +163,11 @@
     border: none;
     border-radius: 2px;
 }
+.modal-prepare-body .prepare-new-box{
+    margin-top: 105px;
+    margin-left: 0px;
+}
+.modal-prepare-body .prepare-new-box input{
+    padding: 6px 8px;
+}
+
