--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -35,7 +35,7 @@
 				<div class="modal-catogry">
 					<span>选择目录：</span><br>
 					<div class="tree-embed">
-						<treecontrol id="tree-embed" class="tree-light" tree-model="treedataSelect" on-selection="showSelected(node)" expanded-nodes="expandedNodes" selected-node="selected" options="opts">
+						<treecontrol id="tree-embed" class="tree-light" tree-model="treedata" on-selection="showSelected(node)" expanded-nodes="expandedNodes" selected-node="selected" options="opts">
 							{{node.label}}
 						</treecontrol>
 					</div>
