fix file thumbnail

--- a/src/coms/layout/views/res/res-header.html
+++ b/src/coms/layout/views/res/res-header.html
@@ -54,7 +54,7 @@
 	
 	<!--<i class="icon-angle-right"></i>
 	<a class="select-tips">全部</a>-->
-	<div class="res-filter">
+	<div class="res-filter" ng-hide="isShowSearch">
 		<!--<label class="right-label">收起筛选</label>-->
 		<input class="res-search" type="search" placeholder="请输入搜索内容" ng-model="searchKeywords"/>
 		<span class="res-search-btn" ng-click="search()">
