--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="op-btn-group nav-item-select">
 					<ul>
-						<li><button class="btn-general btn-white" ng-click="switchItem(0)" op-btn="我的备课"></button></li>
+						<li><button class="btn-general" ng-click="switchItem(0)" op-btn="我的备课"></button></li>
 						<li><button class="btn-general btn-white" ng-click="switchItem(1)" op-btn="我的上传"></button></li>
 						<li><button class="btn-general btn-white" ng-click="switchItem(2)" op-btn="我的下载"></button></li>
 						<li><button class="btn-general btn-white" ng-click="switchItem(3)" op-btn="我的评论"></button></li>
