--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -170,4 +170,12 @@
 .modal-prepare-body .prepare-new-box input{
     padding: 6px 8px;
 }
-
+.modal-remove{
+    float: right;
+    color: #fff;
+    font-size: 22px;
+    line-height: 30px;
+}
+.modal-remove i:hover{
+    color: #666;
+}
