--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -34,7 +34,7 @@
 				<div class="upload-tips upload-tips-custom">
 					<p class="upload-tips-icon"><i class="icon-exclamation-sign"></i> 每个文件最大不超过150M</p>
 					<div class="upload-tips-text">
-						<p>如果您的资源不属于这些格式,请下载<a href="http://www.pcfreetime.com/CN/index.html" target="_new">格式工厂</a>进行格式转换</p>
+						<p>如果您的资源不属于这些格式,请下载<a href="http://www.pcfreetime.com/CN/index.html" target="_blank">格式工厂</a>进行格式转换</p>
 					</div>
 				</div>
 				<div class="clearfix"></div>
