--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -175,6 +175,9 @@
     color: #fff;
     font-size: 22px;
     line-height: 30px;
+    background: #41C9A9;
+    padding: 4px 8px;
+    border-radius: 6px;
 }
 .modal-remove i:hover{
     color: #666;
