--- a/src/less/onlineres.less
+++ b/src/less/onlineres.less
@@ -14,3 +14,27 @@
 #onlineres-container .header-nav-tips span:hover{
     text-decoration: underline;
 }
+
+#onlineres-container .img-box{
+     width: 100%;
+    height: 110px;
+    line-height: 105px;
+    background: #ccc;
+    overflow: hidden;
+}
+#onlineres-container .img-box:hover
+{
+    border: 5px solid @color1;
+}
+#onlineres-container .img-box:hover img
+{
+    transform: scale(1.1);
+    transition: 0.5s ease;
+    -webkit-transition:0.5s ease;
+    -moz-transition:0.5s ease;
+    -o-transition:0.5s ease;
+}
+#onlineres-container .slide-list-item:hover .text-ellipsis
+{
+  white-space: normal;  
+}
