--- a/src/less/res.less
+++ b/src/less/res.less
@@ -273,6 +273,9 @@
     background: @color5;
     color: #fff;
 }
+.res-header-catogry span, .res-header-type span, .res-header-catogry span {
+    line-height: 30px;
+}
 .catalog-tip{
     position: relative;
 }
@@ -285,7 +288,7 @@
 }
 
 .res-header-type{
-    margin: 20px;
+    margin: 15px 20px;
     font-size: 16px;
     color: #808080;
     
@@ -512,7 +515,7 @@
 }
 .res-prepare-list{
     position: absolute;
-    right: -37px;
+    right: -30px;
     top:27px;
     background: #fff;
     padding: 5px 20px;
@@ -523,7 +526,8 @@
     border: 2px solid #41C9A9;
 }
 .res-prepare-list-item{
-    margin: 5px;
+    padding: 5px;
+    margin: 1px;
     text-align: left;
     cursor: pointer;
 }
@@ -531,11 +535,12 @@
     margin: 0;
 }
 .res-prepare-list-item:hover,.prepareList li:hover{
-    text-decoration: underline;
-    color: #0094CE;
+    background: #D3EDE5;
+//  color: #0094CE;
 }
 .res-prepare-list-more{
     color: #3fbbcf;
+    border-top: 1px solid #ddd;
 }
 .res-prepare-thumb{
     bottom: 40px;
