--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -27,9 +27,12 @@
 	</div>
 	
 	<div class="col-md-2">
+		<div class="slide_head">推荐资源：</div>
 		<div class="slide-list">
 			<div class="slide-list-item" ng-repeat="item in slides track by $index"  title="{{item.title}}">
-				<img ng-src="{{ item.imgPath? item.imgPath:'null'}}" fallback-src="{{item.fileSuffix | lowercase}}" ng-click="getResPlayUrl($index, item.resId,item.fromFlag)">
+				<div class="img-box" ng-class="curImg[$index]?'line':''">
+					<img ng-src="{{ item.imgPath? item.imgPath:'null'}}" fallback-src="{{item.fileSuffix | lowercase}}" ng-click="getResPlayUrl($index, item.resId,item.fromFlag)">
+				</div>
 				<span class="slide-rigth-title text-ellipsis">{{item.title}}</span>
 			</div>
 		</div>
