--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -20,6 +20,9 @@ a{
 div[ui-view="content"]{
     min-height: 805px;
 }
+label{
+    font-weight: normal;
+}
 //滚动条
 ::-webkit-scrollbar {
   width: 10px;
@@ -119,7 +122,7 @@ treecontrol{
 }
 .confirm-modal-content{
     margin: 10px;
-    height: 420px;
+    height: 330px;
     background: url('assets/img/modal/modalbg.png') no-repeat;
 }
 .modal-inner-content{
@@ -131,14 +134,8 @@ treecontrol{
     text-align: center;
     font-size: 20px;
 }
-.confirm-modal .modal-dialog {
-    width: 670px;
-}
-.alert-modal .modal-dialog {
-    width: 670px;
-}
-.logger-modal .modal-dialog {
-    width: 670px;
+.confirm-modal .modal-dialog ,.alert-modal .modal-dialog,.logger-modal .modal-dialog {
+    width: 620px;
 }
 
 
