--- a/src/less/header.less
+++ b/src/less/header.less
@@ -51,7 +51,7 @@
     color: #fff;
     padding: 0;
     width: 100%;
-    z-index: 99999999;
+    z-index: 9;
 }
 #header .main-nav li{
     float: left;
