fix onlineres css

--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -10,8 +10,8 @@
 			<div class="slide-content-inner">
 				<div id="res-slide-content"></div>
 			</div>
-			<div class="slide-fullscreen" ng-click="toggleFullscreen()"><i class="icon-fullscreen"></i></div>
 		</div>
+		<div class="slide-fullscreen" ng-click="toggleFullscreen()">全屏查看 <i class="icon-fullscreen"></i></div>
 		<div class="slide-tools" ng-show="VM.slideTools">
 			<div class="slide-arrow2 slide-pre" ng-click="slidePreCustom()"><i class="icon-chevron-left"></i></div>
 			<div class="slide-arrow2 slide-next" ng-click="slideNextCustom()"><i class="icon-chevron-right"></i></div>
