--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -26,8 +26,9 @@
 			<div class="slide-content-inner">
 				<div id="res-slide-content"></div>
 			</div>
-			<div class="slide-fullscreen" ng-click="toggleFullscreen()"><i class="icon-fullscreen"></i></div>
+			<!--<div class="slide-fullscreen" ng-click="toggleFullscreen()"><i class="icon-fullscreen"></i></div>-->
 		</div>
+		<div class="slide-fullscreen" ng-click="toggleFullscreen()">全屏查看 <i class="icon-fullscreen"></i></div>
 	</div>
 	<div class="col-md-2" >
 		<!--<div class="slide_head">类型：<span class="type_box"><span>{{typeName}}</span><i class="icon-angle-down" ng-hide="VM.preShow"></i></span>-->
