--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -50,19 +50,16 @@
     height: 100%;
 }
 .slide-fullscreen{
-    position: absolute;
-    bottom:6px;
-    right: 6px;
+    margin-top: 6px;
+    text-align: center;
     padding: 6px 10px;
-    background: rgba(0,0,0,0.5);
     font-size: 20px;
     border-radius: 50px;
     cursor: pointer;
-    color: #ddd;
+    color: #333;
 }
 .slide-fullscreen:hover{
-    background: rgba(255,255,255,0.8);
-    color: #333;
+    color: #666;
 }
 .slide-container .slide-tools{
     position: relative;
