--- a/src/less/onlineres.less
+++ b/src/less/onlineres.less
@@ -41,3 +41,17 @@
 #onlineres-container .line {
   border: 5px solid #12879A;
 }
+#onlineres-container .slide_head {
+    height: 30px;
+    line-height: 28px;
+    cursor: pointer;
+    margin-top: 10px;
+    background: #5D5D5D;
+    color: #fff;
+    padding: 0 5px;
+    border-bottom: 1px solid #3FBBCF;
+    border-left: 10px solid #3FBBCF
+}
+#onlineres-container .slide-list{
+    margin-top: 0;
+}
