--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -27,7 +27,7 @@
 	</div>
 	
 	<div class="col-md-2">
-		<div class="slide_head">推荐资源：</div>
+		<div class="slide_head">资源列表：</div>
 		<div class="slide-list">
 			<div class="slide-list-item" ng-repeat="item in slides track by $index"  title="{{item.title}}">
 				<div class="img-box" ng-class="curImg[$index]?'line':''">
