--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -93,6 +93,20 @@
         left: 0;
     }
 
+    .noPrepare {
+        width: 400px;
+        height: 500px;
+        margin: 50px auto;
+        background: url(assets/img/not_found.png) no-repeat;
+
+        p {
+            padding-top: 250px;
+            padding-left: 100px;
+            font-size: 24px;
+            color: #55A988;
+        }
+    }
+
 }
 
 .btn-op {
