--- a/src/coms/layout/views/prepare/prepare-add.html
+++ b/src/coms/layout/views/prepare/prepare-add.html
@@ -33,7 +33,7 @@
 					<!--<select ng-change="selectPrepare(currentPrepare)" ng-model="currentPrepare">-->
 					<div class="select-prepare-list">
 						<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>
-						<div ng-repeat="pp in prepares track by $index" ng-class="{'select-active':isActive($index)}" ng-click="selectPrepare($index)" ng-bind="pp.title" value="{{pp}}"></div>
+						<div ng-repeat="pp in prepares track by $index" class="text-ellipsis" ng-class="{'select-active':isActive($index)}" ng-click="selectPrepare($index)" ng-bind="pp.title" value="{{pp}}"></div>
 						<div ng-show="prepares.length == 0">当前选择下没有备课夹，请重新选择 或者 新建</div>
 					</div>
 					<!--</select>-->
