--- a/src/less/res.less
+++ b/src/less/res.less
@@ -518,7 +518,7 @@
     right: -30px;
     top:27px;
     background: #fff;
-    padding: 5px 20px;
+    padding: 0 20px;
     display: none;
     color: #999;
     width: 200px;
@@ -728,6 +728,7 @@
     border: 1px solid #ddd;
     padding: 6px;
     cursor: pointer;
+    max-width: 420px;
 }
 .prepare-select-modal .select-prepare-list div{
     margin-bottom: 5px;
