--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -52,6 +52,11 @@
 .user-info-custom{
     margin-bottom: 0;
 }
+
+.user-info li:hover {
+    background: #3FBBCF;
+    color: #FFFFFF;
+}
 .btn-pink {
     background-color: #EC80AF;
     line-height: 35px;
