--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -42,6 +42,7 @@
 				</div>
 				<div class="prepare-seperate"><i class="icon-angle-right"></i><i class="icon-angle-right"></i></div>
 				<div class="prepare-title-box prepare-new-box">
+					<p>请输入备课夹名称：</p>
 					<input class="prepare-title-input" ng-model="prepareName" value="prepareName">
 					<!--<button class="btn-op">确定</button>-->
 				</div>
