--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -378,7 +378,13 @@
     .prepare-title-box {
         float: right;
         margin: 20px 100px 20px 100px;
+
+        p {
+            color: #F00;
+            font-size: 20px;
+        }
     }
+
 
     .modal-prepare-name {
         margin-right: 50px;
