--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -72,7 +72,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="noPrepare" ng-show="listData.length == 0">
+	<div class="noPrepare" ng-show="noPrepare">
 		<p>亲，<br>该节点下没有备课夹，<br>快点击右上角新建吧！</p>
 	</div>
 </div>
