--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -15,16 +15,15 @@
 						<span><img src="assets/img/loc.png" /><i>{{ user.termName }}</i>|<i>{{ user.subjectNames }}老师 </i>|<i ng-class="user.male == '男'? 'icon-male':'icon-female'"></i></span>
 						<span class="user-school"><img class="user-info-icon" src="assets/img/tie.png" />{{ user.schoolName }}</span>
 						<button class="btn-general btn-pink" ng-click="uploadRes()">上传资源</button>
-						<!--<button class="btn-general btn-pink" ng-click="VM.uploadResInfo()">编辑资源</button>-->
 					</div>
 				</div>
 				<div class="op-btn-group nav-item-select">
 					<ul>
-						<li><button class="btn-general" ng-click="switchItem(0)" op-btn="我的备课"></button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(1)" op-btn="我的上传"></button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(2)" op-btn="我的下载"></button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(3)" op-btn="我的评论"></button></li>
-						<li><button class="btn-general btn-white" ng-click="switchItem(4)" op-btn="最近浏览"></button></li>
+						<li><button class="btn-general" ng-class="{'btn-white':!switchItemCtrl[0]}" ng-click="switchItem(0)">我的备课</button></li>
+						<li><button class="btn-general" ng-class="{'btn-white':!switchItemCtrl[1]}" ng-click="switchItem(1)">我的上传</button></li>
+						<li><button class="btn-general" ng-class="{'btn-white':!switchItemCtrl[2]}" ng-click="switchItem(2)">我的下载</button></li>
+						<li><button class="btn-general" ng-class="{'btn-white':!switchItemCtrl[3]}" ng-click="switchItem(3)">我的评论</button></li>
+						<li><button class="btn-general" ng-class="{'btn-white':!switchItemCtrl[4]}" ng-click="switchItem(4)">最近浏览</button></li>
 					</ul>
 				</div>
 			</div>
