--- a/src/less/res.less
+++ b/src/less/res.less
@@ -559,13 +559,14 @@
 }
 
 .addPrepare-custom{
-    width: 120px;
+    width: 115px;
+    font-size: 15px;
     float: right;
     height: 40px;
     margin-top: 5px;
     position: relative;
     margin-left: 5px !important;
-    margin-right: 8%;
+    margin-right: 10px;
 }
 .thubmlist-tools-custom .res-download{
     float: left;
