--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -140,23 +140,23 @@
 		    	<div class="tab-content-body">
 		    		<div class="main-body">
 		    			<div class="user-info">
-		    				<form class="user-info-form">
+		    				<form class="user-info-form user-info-custom">
 		    					<span class="info-label">旧密码：</span>
 		    					<input type="password" value="oldPsw" class="user-info-input passwd-input" ng-model="oldPsw" ng-focus="initForm()"> 
 	    						<label class="hint-one hint-five" ng-show="oldPswError">原密码错误，请重新输入！</label>
 		    				</form>
 		    			</div>
 		    			<div class="user-info">
-		    				<form class="user-info-form">
+		    				<form class="user-info-form user-info-custom">
 		    					<span class="info-label">新密码：</span>
 		    					<input type="password" value="newPsw" class="user-info-input passwd-input" ng-model="newPsw">
-		    					<label class="hint-one hint-two">建议使用英文字母加数字或符号的混合密码。</label>
+		    					<label class="hint-one hint-two">建议使用英文字母加数字或符号混合</label>
 		    					<label class="hint-one hint-five" ng-show="newPswError">请输入新密码。</label>
 		    				</form>
 		    					
 		    			</div>
 		    			<div class="user-info">
-		    				<form class="user-info-form">
+		    				<form class="user-info-form user-info-custom">
 		    					<span class="info-label">再次确认：</span>
 		    					<input type="password" value="confirmNewPsw" class="user-info-input passwd-input" ng-model="confirmNewPsw">
 		    					<label class="hint-one hint-five" ng-show="confirmFail">两次密码不一致，请重新输入！</label>
