--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -137,11 +137,17 @@
     height: 40px; 
     border: 1px #DDDDDD solid;
     border-radius: 2px;
-    padding: 10px 10px;
+    padding: 10px 5px;
     margin-right: 5px;
     color: #000000;
 }
-
+.user-info-custom{
+    line-height: 40px;
+}
+.user-info-custom span{
+    line-height: 40px;
+    
+}
 .true-name-input {  
     width: 200px;    
 }
