fix tocken failuer

--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -132,8 +132,8 @@
 		    		<div class="clear-float"></div>
 		    	</div>
 		    	<div class="tab-content-footer">
-		    		<button class="btn-general" ng-click="saveUserInfo()">储存</button>
-		    		<button class="btn-general">取消</button>
+		    		<button class="btn-general" ng-click="saveUserInfo()">保存</button>
+		    		<!--<button class="btn-general">取消</button>-->
 		    	</div>
 		    </div>
 		    <div role="tabpanel" class="tab-pane" id="passwd">
