--- a/src/less/settings.less
+++ b/src/less/settings.less
@@ -134,10 +134,11 @@
 }
 
 .user-info-input {
-    height: 40px; 
+    height: 40px;
+    line-height: 40px;
     border: 1px #DDDDDD solid;
     border-radius: 2px;
-    padding: 10px 5px;
+    padding-left: 5px;
     margin-right: 5px;
     color: #000000;
 }
