--- a/src/coms/personal-center/views/my-upload.html
+++ b/src/coms/personal-center/views/my-upload.html
@@ -30,7 +30,7 @@
 					资源类型
 				</div>
 				<div class="col-md-3 col-sm-3">
-					资源日期
+					上传时间
 				</div>
 				<div class="col-md-2 col-sm-2">
 					操作
