--- a/src/coms/layout/views/res/res-content.html
+++ b/src/coms/layout/views/res/res-content.html
@@ -24,16 +24,18 @@
 		<ul class="res-ul-list" ng-show="isList">
 			<div class="loading" ng-show="isLoading"><i class="icon-spinner icon-spin icon-3x"></i></div>
 			<li class="animated slideInUp res-input res-list-item " ng-repeat="list in resList.list track by $index" ng-init="parentIndex = $index">
-				<a ui-sref="previewres({resId:list.id,curTfcode:curTfcode})" target="_blank" title="{{list.title}}">
+				<div title="{{list.title}}">
 					<input id="page{{VM.currentPageCtrl}}_{{$index}}" class="res-checkbox" checklist-model="resList.select" checklist-value="list.id" type="checkbox" ng-click="addItemSelect(list.id)" />
 					<label for="page{{VM.currentPageCtrl}}_{{$index}}"></label>
 					<img ng-show="list.new" class="is-new-list" src="assets/img/new.png" />
-					<div class="img-thumb-list img-thumb-list-res">
+					<a class="img-thumb-list img-thumb-list-res" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})" target="_blank" >
 						<img class="prepare-shop res-list-thumb" ng-src="{{list.thumbnailpath ? list.thumbnailpath:'null'}}" fallback-src="{{list.fileExt | lowercase}}">
 						<span class="res-author" ng-show="fromFlag==0 && list.speaker">主讲人：{{ list.speaker }}</span>
-					</div>
+					</a>
 					<span class="res-list-info">
-						<label class="res-title text-ellipsis">{{ list.title }}</label>
+						<div>
+							<a class="res-title text-ellipsis" ui-sref="previewres({resId:list.id,curTfcode:curTfcode})" target="_blank" >{{ list.title }}</a>
+						</div>
 						<label class="res-type">类型: {{ list.mtype }}</label>
 						<label class="res-size">
 							<res-size data-value="{{list.fsize}}"></res-size>
@@ -44,7 +46,7 @@
 						<res-star data-value="{{list.avgScore}}"></res-star>
 						<label class="res-number">{{list.clickTimes}}浏览/{{list.dloadTimes}}下载</label>
 					</span>
-				</a>
+				</div>
 				
 				<span class="res-list-tools">
 					
