--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -94,7 +94,7 @@
 		    				<form class="user-info-form">
 		    					<span class="info-label">真实姓名：</span>
 		    					<input type="text" value="{{trueName}}" id="truename" class="user-info-input true-name-input" ng-model="trueName"> 
-		    					<span class="hint-one">4-20个中文字符(中文占两个字符)，支持中英文</span>
+		    					<span class="hint-one">请输入2-20个中英文字符</span>
 		    				</form>
 		    			</div>
 		    			<div class="user-info">
