--- a/src/less/res.less
+++ b/src/less/res.less
@@ -375,7 +375,7 @@
 }
 .res-thubmlist-info{
     font-size: 13px;
-    margin-top: 210px;
+    padding-top: 210px;
 }
 .res-thubmlist-info label{
     margin: 5px 0;
