add copy and move prepare

--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -161,6 +161,18 @@
 .move-prepare-content .select-inner-content{
      height: 340px;
 }
+.sp-edit {
+    .popover li:hover{
+        background: #3fbbcf;
+        color: #fff;
+    }
+}
+.sp-edit:hover {
+    .popover {
+        display: block;
+        left: 80%;
+    }
+}
 .list-content {
 
     .hold-on, .list-content .local-res{
@@ -203,15 +215,7 @@
         left: 440px;
         top: 60px;
     }
-    
-    .sp-edit:hover {
-        .popover {
-            display: block;
-            left: 80%;
-        }
-    }
-
-
+  
     .list-item i{
        color: #808080;
        margin: 5px;
