--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -552,3 +552,12 @@
         font-size: 20px;
     }
 }
+
+// 分页
+.prepare-coms-pagination{
+    display: block;
+    text-align: center;
+    width: 400px;
+    margin: 15px auto;
+    padding-left: 0;
+}
